Add initial content and styles

--- a/index.html
+++ b/index.html
@@ -4,10 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Data Fusion Contest 2023</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Data Fusion Contest 2023</h1>
-    <p>Key features of the Data Fusion Contest 2023 are its tournament format...</p>
-    <!-- Add more content here -->
+    <header>
+        <h1>Data Fusion Contest 2023</h1>
+    </header>
+    <main>
+        <section>
+            <h2>Overview</h2>
+            <p>The Data Fusion Contest 2023 is a competitive event...</p>
+            <!-- Add more content as needed -->
+        </section>
+        <section>
+            <h2>Competition Details</h2>
+            <p>Key features of the Data Fusion Contest 2023 are its tournament format...</p>
+            <!-- Add more content as needed -->
+        </section>
+        <!-- Add additional sections as needed -->
+    </main>
+    <footer>
+        <p>&copy; 2023 Data Fusion Contest</p>
+    </footer>
 </body>
 </html>
