add image and txt

--- a/index.html
+++ b/index.html
@@ -13,7 +13,18 @@
     <main>
         <section>
             <h2>Overview</h2>
-            <p>The Data Fusion Contest 2023 is a competitive event...</p>
+            <img src="/images/Legend.png" alt="Overview Image" class="overview-image">
+            <p>A key feature of the Data Fusion Contest 2023 is its tournament format. There are 2 closely related tasks in the competition: Attack and Defense. You can participate in either of them, including both tasks at once. Both tasks are based on common inputs and materials:</p>
+            <p>In both tasks, the same dataset of transactions with markup is used;</p>
+            <p>The competition uses only one attack mechanism through data input distortion;</p>
+            <p>The attack model is both the target in the Attack task and the starting point in the Defense task;</p>
+            <p>Both tasks deal with binary classification models of the same target variable (credit default risk).</p>
+            <p>Despite the similarity in materials, both tasks have fundamental differences:</p>
+            <ul>
+                <li><strong>Solution format:</strong> in the Attack task, the format is .csv files; in the Defense task, it is archives with models and code;</li>
+                <li><strong>Metrics:</strong> in the Attack task, the difference in ROC-AUC relative to the attacked model is calculated; in the Defense task, the harmonic mean of ROC-AUC on the original and attacked data is calculated;</li>
+                <li><strong>Approaches:</strong> finding the best edits in different families of models versus increasing model robustness.</li>
+            </ul>
             <!-- Add more content as needed -->
         </section>
         <section>
