--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <main>
         <section>
             <h2>Overview</h2>
-            <img src="/images/Legend.png" alt="Overview Image" class="overview-image">
+            <img src="images/Legend.png" alt="Overview Image" class="overview-image">
             <p>A key feature of the Data Fusion Contest 2023 is its tournament format. There are 2 closely related tasks in the competition: Attack and Defense. You can participate in either of them, including both tasks at once. Both tasks are based on common inputs and materials:</p>
             <p>In both tasks, the same dataset of transactions with markup is used;</p>
             <p>The competition uses only one attack mechanism through data input distortion;</p>
