--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </header>
     <main>
         <section>
-            <h2>Contest legeng</h2>
+            <h1>Contest legeng</h1>
             
             <p>A key feature of the Data Fusion Contest 2023 is its tournament format. There are 2 closely related tasks in the competition: Attack and Defense. You can participate in either of them, including both tasks at once. Both tasks are based on common inputs and materials:</p>
             <img src="images/Legend_eng.png" alt="Overview Image" class="overview-image">
@@ -37,7 +37,7 @@
             <!-- Add more content as needed -->
         </section>
         <section>
-            <h2>Tournament</h2>
+            <h1>Tournament</h1>
             <p>If we were talking about the usual competition format, the participants of each task competed primarily with the organizers' materials:</p>
             <ul>
                 <li><strong>In the Attack task:</strong> prepared attacks only against the organizers' pre-prepared model;</li>
@@ -83,7 +83,24 @@
             <p>The overall competition and tournament timeline is as follows:</p>
             <img src="images/Timeline_eng.png" alt="Overview Image" class="overview-image">
         </section>
-        <!-- Add additional sections as needed -->
+        <section>
+            <h1>Attack task</h2>
+            <p>Desc...</p>
+            <ul>
+                <li><strong>(general)</strong> Your team is in the top 10 on the leaderboard used for tournament selection. For the intermediate tournament this is the top-10 on the public leaderboard as of 06.03.2023 0:00 (Moscow time). For the final tournament it is the top-10 on the private leaderboard as of 03.04.2023 12:00 (Moscow time);</li>
+                <li><strong>(only for the Attack task)</strong> If your team is in the top 10, you need to run the selected solutions on the new tournament data. The data will be transmitted directly by the organizer's representatives. It is necessary to run the solutions and transfer the result within 24 hours. <strong>This must be done in both tournaments.</strong></strong></li>
+            </ul>
+            <p>No further action is required on the part of the participants in the Protection task.</p>
+        </section>
+        <section>
+            <h2>Attack task det </h2>
+            <p>Desc...</p>
+            <ul>
+                <li><strong>(general)</strong> Your team is in the top 10 on the leaderboard used for tournament selection. For the intermediate tournament this is the top-10 on the public leaderboard as of 06.03.2023 0:00 (Moscow time). For the final tournament it is the top-10 on the private leaderboard as of 03.04.2023 12:00 (Moscow time);</li>
+                <li><strong>(only for the Attack task)</strong> If your team is in the top 10, you need to run the selected solutions on the new tournament data. The data will be transmitted directly by the organizer's representatives. It is necessary to run the solutions and transfer the result within 24 hours. <strong>This must be done in both tournaments.</strong></strong></li>
+            </ul>
+            <p>No further action is required on the part of the participants in the Protection task.</p>
+        </section>    
     </main>
     <footer>
         <p>&copy; Data Fusion Adversarial Contest 2023</p>
